# TypingAnalyzer

./: .gitignore  CMakeLists.txt  README.md
KeyboardAnalyzer/: CMakeLists.txt  EmptyKBSoundPlayer.h  KBSoundPlayerI.h  KeyboardAnalyzer.cpp  emptykbsoundplayer.cpp  main.cpp  main.qrc  mainwindow.h  qtquickcontrols2.conf  typewritersp.cpp  typewritersp.h  wordcounter.cpp  wordcounter.h  wpmcalculator.cpp  wpmcalculator.h
KeyboardAnalyzer/components/: CMakeLists.txt  FreeModePage.qml  Main.qml  MainWindow.qml  MenuPage.qml  MyHeader.qml  SettingsMenu.qml  WPMChart.qml  timefocusmodel.cpp  timefocusmodel.h
KeyboardAnalyzer/components/ui/: BoundedTextEdit.qml  CMakeLists.txt  MenuButton.qml  NamedTextField.qml  TimeInput.qml  Typewriter.qml
KeyboardWatcher/: CMakeLists.txt
KeyboardWatcher/include/: keyboardinterceptor.h  keyboardwatcher_include.h  keyevent.h
KeyboardWatcher/src/: KeyboardInterceptor_private.h  winkeyboardinjection.cpp  winkeyboardinterceptor.cpp  winkeyboardinterceptor.h
WinKeyboardCapture/: CMakeLists.txt  ikeyboardinterceptor.h  keyevent.h  keywatcher.cpp  keywatcher.h  keywatcher_private.h  winkeyboardinterceptor.cpp  winkeyboardinterceptor.h  winkeywatcher.cpp
lib/: CMakeLists.txt
lib/keyboardWatcher/: CMakeLists.txt
lib/keyboardWatcher/include/: akeyboardinterceptor.h
lib/keyboardWatcher/src/: akeyboardinterceptor.cpp  keyboardInterceptor.cpp  winkeyboardinterceptor.cpp
lib/typingAnalyzer/: CMakeLists.txt  KeyboardAnalyzer.h  aconfigurable.cpp  aconfigurable.h  application.h  applicationsettings.cpp  applicationsettings.h  apppage.cpp  apppage.h  appsetting.cpp  appsetting.h  contentbuilder.cpp  contentbuilder.h  customkbproducer.h  customperiodproducer.cpp  customperiodproducer.h  displayedsetting.cpp  displayedsetting.h  executable.cpp  executable.h  executableholder.cpp  executableholder.h  executablekbproducer.cpp  executablekbproducer.h  freemodepage.cpp  freemodepage.h  iqmlcontent.h  listsetting.cpp  listsetting.h  namedobject.cpp  namedobject.h  pageapplication.cpp  pageapplication.h  perioddecrementer.cpp  perioddecrementer.h  periodsmodel.cpp  periodsmodel.h  settingspage.cpp  settingspage.h  slidersetting.cpp  (+16 more)
lib/typingAnalyzer/qml/: FreeModePage.qml  Main.qml  MainWindow.qml  MenuButton.qml  MyHeader.qml  PageSelector.qml  SettingsPage.qml  StatisticsDialog.qml  TimeField.qml  TimeFocusPage.qml  TimeFocusPanel.qml  Typewriter.qml  UIComboBox.qml  WpmStatistics.qml
src/: AKBSoundPlayer.cpp  AKBSoundPlayer.h  Applicationsettings.cpp  Applicationsettings.h  CMakeLists.txt  EmptyKBSoundPlayer.h  aconfigloader.cpp  aconfigloader.h  aconfigurable.h  app.cpp  app.h  application.cpp  application.h  apppage.h  configprototype.h  contentbuilder.cpp  customkbproducer.cpp  customkbproducer.h  customperiodproducer.cpp  customperiodproducer.h  emptykbsoundproducer.cpp  emptykbsoundproducer.h  emptyperiodsoundproducer.cpp  emptyperiodsoundproducer.h  executable.h  executablekbproducer.h  freemodepage.cpp  freemodepage.h  listsetting.cpp  listsetting.h  localconfigloader.cpp  localconfigloader.h  main.cpp  main.qrc  mainwindow.cpp  namedobject.h  pageapplication.cpp  pageapplication.h  pressingmodel.h  qtquickcontrols2.conf  (+27 more)
src/components/: CMakeLists.txt  ConfigurationList.qml  FreeModePage.qml  ImageButton.qml  InputHandler.qml  Main.qml  MainWindow.qml  MainWindowPage.qml  SettingsPage.qml  StatisticsDialog.qml  TimeFocusPage.qml  TimeFocusPanel.qml  WPMChart.qml  WpmStatistics.qml
src/components/ui/: CMakeLists.txt  UILineEdit.qml  UISlider.qml
tests/unit/: CMakeLists.txt  app_test.cpp
